Refactor stream collection to use toList() method
This commit switches from using the verbose .collect(Collectors.toList()) to the simpler Java 16 method .toList() for stream results within the getAllFutureOrCurrentEvents() and getAllPastEvents() methods in EventService class.